Issue #3226712 by mikolajmendys: Elements in text tiles are not aligned

--- a/themes/custom/droopler_theme/scss/components/_d_p_text_blocks.scss
+++ b/themes/custom/droopler_theme/scss/components/_d_p_text_blocks.scss
@@ -142,7 +142,6 @@ $d-p-single-text-box-grid-large-padding: $grid-gutter-width !default;
       justify-content: center;
 
       .content-wrapper {
-        text-align: center;
         padding: $d-p-text-blocks-tiles-padding 0;
         .field--name-field-d-main-title{
           text-align: center;
